# knowledge-mcp

./: .env.example  .gitignore  API.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.external.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: index.html
examples/: claude_mcp_config.json  code-reviewer.SKILL.md  git-commit-message.SKILL.md  python-debugger.SKILL.md
knowledge_mcp/: __init__.py  __main__.py  analytics.py  config.py  embeddings.py  http_server.py  qdrant.py  rest_api.py  server.py
scripts/: import_skills.py  knowledge-mcp.service.example  start.sh
tests/: conftest.py  test_config.py  test_embeddings.py  test_qdrant_service.py  test_server_tools.py  test_server_validation.py
