[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-mcp"
version = "0.1.0"
description = "Self-hosted RAG knowledge base for AI coding assistants via MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tomasz Wyderka"},
]
keywords = ["mcp", "rag", "knowledge-base", "qdrant", "ollama", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.17.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "uvicorn>=0.30.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.urls]
Homepage = "https://github.com/ximot/knowledge-mcp"
Repository = "https://github.com/ximot/knowledge-mcp"
Issues = "https://github.com/ximot/knowledge-mcp/issues"

[project.scripts]
knowledge-mcp = "knowledge_mcp.__main__:main"
knowledge-mcp-http = "knowledge_mcp.http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
